using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string isMoving = "IsMoving";
    internal static string isRunning = "IsRunning";
    internal static string isGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "Jump";
    internal static string isOnWall = "IsOnWall";
    internal static string isOnCeiling = "IsOnCeiling";
    internal static string attackTrigger = "Attack";
    internal static string canMove = "CanMove";
    internal static string hasTarget = "HasTarget";
    internal static string isAlive = "IsAlive";
    internal static string hitTrigger = "Hit";
    internal static string lockVelocity = "LockVelocity";
    internal static string attackCooldown = "AttackCooldown";
}
